[gi] pass raw GValues instead of trying to marshal them

* Right now GValues are transparent to the user but this leave us no
   way to describe fundimental types other than those supported directly
   by python (e.g. int, str, etc)
 * If an interface is expecting a uint or other GValue type a user can now use
   the raw GValue interfaces and expect paramaters that take GValues to
   marshal them correctly e.g.:
       value = GObject.Value()
       value.int(GObject.TYPE_UINT)
       value.set_uint(1234)
 * The objective here is to not for users to use this API but for overrides
   to be able to utilize them.  For instance in the TreeModel API we can
   get the expected type for a column and them create a GValue with the correct
   type so that he underlying python object is marshalled correctly.

https://bugzilla.gnome.org/show_bug.cgi?id=642914